standardise provider cache naming schemes, use unused return values and more cleanup